# rattlescript

./: .gitignore  CHANGES.md  Cargo.toml  LICENSE  LICENSE.md  README.md  math.rat  test.rat  test2.rat  tmp.txt
.github/workflows/: build.yml
examples/: decorator.rat  linked_list.rat  rock_paper_scissors.rat  test.rs
examples/caluc/: common.rat  interpreter.rat  lexer.rat  main.rat  parser.rat
runtime/datatypes/: common.c  common.h  list.c  list.h  value.c  value.h
src/: ast.rs  builtin.rs  builtins.rs  common.rs  error.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  repl.rs  token.rs  utils.rs  value.rs
src/compiler/: mod.rs
src/interpreter/: builtin.rs  mod.rs  random.rs  value.rs
std/: array.rat  collection.rat  json.rat  math.rat  random.rat  string.rat
tests/: binary_logic.rat  binaryops.rat  builtins.rat  class.rat  class_inheritance.rat  closures.rat  decorator.rat  dictionaries.rat  field_access_duplicate_run.rat  first_argument_variadic.rat  if.rat  lambda.rat  list_comprehension.rat  multiple_assignment.rat  no_argument_class_function.rat  number_bases.rat  postfix.rat  string_multiplication.rat  test.py
tests/bad/: addition.rat  assert.rat  class_function_without_self.rat  comment.rat  function_same_name_arguments.rat  no_argument_class_function.rat  uninitialized_variable_assignment.rat
tests/good/: arrow_return.rat  binaryops.rat  builtins.rat  class.rat  class_inheritance.rat  class_instance_is_instance_of.rat  fib.rat  first_argument_variadic.rat  function_consuming_endline.rat  if_statement_expression_body.rat  import.rat  postfix.rat  (+14 more)
(+1 files in other folders)
